sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:2: error: Missing closing brace `}' assumed here
var d = 0
^AlgShellSort:2: error: expected class or object definition
var d = 0
^AlgShellSort:3: error: expected class or object definition
def shellSort()  {
^