sort.basic.shell.AlgShellSort.scala.code
var d = 0
def shellSort()  {
  var ecart = (getNombreValeurs)/2
  while (ecart > 0){
   for ( i <- 0 to (getNombreValeurs-1)/2){
     var j= 1
     d=0
     while (( ((i+j*ecart) <= getNombreValeurs-1 ) || (i+(j-1)*ecart>=0))){
       if (getValeur(i+j*ecart) < getValeur(i+(j-1)*ecart)){
       	echange(i+j*ecart, i+(j-1)*ecart)
       if ((i+(j+1)*ecart) <= getNombreValeurs-1 && d=0){
         j += 1
       } else if ((i + (j-2)*ecart)>=0){
         j -= 1
         d=1
       }
     }
   }
  	ecart = ecart / 2
	}
}